--- a/Applications/Android/Samples/res/xml/innstillinger.xml
+++ b/Applications/Android/Samples/res/xml/innstillinger.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/instillinger_title">
+    android:title="morn">
 <PreferenceCategory
-    android:title="@string/instillinger_title">
+    android:title="morn">
     <CheckBoxPreference
         android:key="pref"
         android:title="Er Long dum?"
