--- a/sailsafe/src/main/res/layout/drawer_list_item.xml
+++ b/sailsafe/src/main/res/layout/drawer_list_item.xml
@@ -13,19 +13,12 @@
         android:layout_marginTop="5px"
         android:src="@drawable/kabelferge">
     </ImageView>
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
         android:id="@+id/text_nav"
-        android:text="Testing"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:textColor="#fff"
-        android:background="?android:attr/activatedBackgroundIndicator"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall"
-        android:focusable="false"
-        android:clickable="false"
-        />
+        android:text="@+id/label"
+        android:textSize="60px"
+        android:textColor="#ffffff">
+    </TextView>
 </LinearLayout>
