--- a/sailsafe/src/main/res/layout/drawer_list_item.xml
+++ b/sailsafe/src/main/res/layout/drawer_list_item.xml
@@ -20,5 +20,6 @@
         android:text="@+id/label"
         android:textSize="60px"
         android:textColor="#ffffff">
-    </TextView>
+    </TextView
+    >
 </LinearLayout>
