--- a/sailsafe/src/main/res/layout/drawer_list_item.xml
+++ b/sailsafe/src/main/res/layout/drawer_list_item.xml
@@ -20,6 +20,5 @@
         android:text="@+id/label"
         android:textSize="60px"
         android:textColor="#ffffff">
-    </TextView
-    >
+    </TextView>
 </LinearLayout>
