--- a/sailsafe/src/main/res/layout/mapviewer.xml
+++ b/sailsafe/src/main/res/layout/mapviewer.xml
@@ -22,11 +22,11 @@
     <TextView
             android:id="@+id/txtSpeedView"
             android:layout_width="fill_parent"
-            android:layout_height="12dip"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:gravity="center"
             android:textColor="#000"
-            android:textSize="5dp"
+            android:textSize="24sp"
     />
 
     <ImageView
