--- a/sailsafe/src/main/res/layout/mapviewer.xml
+++ b/sailsafe/src/main/res/layout/mapviewer.xml
@@ -11,6 +11,7 @@
 
     <TextView
         android:id="@+id/attribution"
+        android:text="@string/attribution"
         android:layout_width="fill_parent"
         android:layout_height="10dip"
         android:layout_alignParentBottom="true"
